<resources>
    <string name="app_name">5x5 Assistant</string>
    <string name="facebook_app_id">183927645393936</string>
    <string name="fb_login_protocol_scheme">fb183927645393936</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="fbLogin">Continue with facebook</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="signUpPrompt">Don\'t have an account?</string>
    <string name="signUpPromptLink">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="loginFail">Login Failed</string>
    <string name="minPW">Password must be at least 5 characters long</string>
    <string name="signout">Sign Out</string>
    <string name="welcome">Welcome to 5x5 Assistant!</string>
    <string name="welcome2">Please enter the information below to create your profile</string>

    <!-- Stat prompts -->
    <string name="bwPrompt">Bodyweight (lb)</string>
    <string name="squatPrompt">Squat (lb)</string>
    <string name="benchPrompt">Bench Press (lb)</string>
    <string name="rowPrompt">Barbell row (lb)</string>
    <string name="ohpPrompt">Overhead press (lb)</string>
    <string name="dlPrompt">Deadlift (lb)</string>
    <string name="createProfile">Create Profile</string>


    <string name="action_settings">Settings</string>
    <string name="exGuide">Excercise Guide</string>
    <string name="progress">Progress</string>
    <string name="title_activity_workout">Workout</string>
    <string name="bench">Bench Press</string>
    <string name="ohp">Overhead Press</string>
    <string name="squat">Squat</string>
    <string name="dl">Deadlift</string>
    <string name="row">Barbell Row</string>
    <string name="pullups">Pull-ups</string>
    <string name="title_activity_workout1">Workout A</string>
    <string name="title_activity_workout2">Workout B</string>
    <string name="heading_size">30sp</string>
    <string name="title_activity_guide">Excercise Guide</string>
    <string name="workout">Workout</string>
    <string name="select_workout">Select Workout</string>
    <string name="workout_a">Workout A</string>
    <string name="workout_b">Workout B</string>
    <string name="namePrompt">Name</string>
    <string name="register">Register</string>
    <string name="pwConfirm">Confirm Password</string>
    <string name="workoutFin">Finish Workout</string>
    <string name="lb">LB</string>
    <string name="bw">Body Weight</string>
    <string name="saveStats">Save Stats</string>
    <string name="date">DATE:  </string>
    <string name="workoutProg">WORKOUT: </string>
    <string name="weightProg">WEIGHT</string>
    <string name="unitsProg">(LB)</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="logout">Log Out</string>
    <string name="forgotPW">Forgot your password?</string>
    <string name="pwResetPrompt">Enter the email address associated with your account to send
                                    the reset password instructions</string>
    <string name="pwReset">Reset Password</string>
    <string name="pwChange">Change Password</string>
    <string name="units">Units</string>
    <string name="kg">KG</string>
    <string name="workoutHeading">Workout:</string>
    <string name="newEmailPrompt">Enter new email below</string>
    <string name="newEmail">New Email</string>
    <string name="changeEmail">Change Email</string>
    <string name="oldPW">Old Password</string>
    <string name="newPW">New Password</string>
    <string name="newPW2">Confirm New Password</string>
    <string name="noHistory">You have not completed any workouts yet!</string>


    <string name="title_activity_home">Home</string>
    <string name="title_activity_workout_a">Workout A</string>
    <string name="title_activity_workout_b">Workout B</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_login">5x5 Assistant</string>
    <string name="title_activity_workout_select">Select Workout</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_progress">Progress</string>
    <string name="title_activity_pwreset">Reset Password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_change_email">Change Email</string>
    <string name="title_activity_change_pw">Change Password</string>
    <string name="title_activity_profile_create">ProfileCreateActivity</string>
    <string name="statsPrompt"> Please enter your weights below: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
