<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/actionBarSettings"
        android:title="@string/settings"
        android:icon="@drawable/settings"
        android:visible="true"
        android:enabled="true"
        android:showAsAction="always">
    </item>
    <item android:id="@+id/actionBarHome"
        android:title="@string/home"
        android:icon="@drawable/home"
        android:visible="true"
        android:enabled="true"
        android:showAsAction="always">
    </item>
    <item android:id="@+id/actionBarLogout"
        android:title="@string/logout"
        android:icon="@drawable/logout"
        android:visible="true"
        android:enabled="true"
        android:showAsAction="always">
    </item>
</menu>

