<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="140dp"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hitro.a5x5assistant.HomeActivity"
    tools:showIn="@layout/activity_home">

    <Button
        android:id="@+id/btnProg"
        android:text="@string/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>

    <Button
        android:text="@string/title_activity_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnStats" />
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>

    <Button
        android:id="@+id/btnGuide"
        android:text="@string/exGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </Space>

</LinearLayout>
