<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hitro.a5x5assistant.RegisterActivity">

    <TextView
        android:text="@string/prompt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/txtPW"
        android:textColor="@android:color/holo_red_light" />

    <TextView
        android:text="@string/prompt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmail"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light" />

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/btnRegister"
        android:layout_below="@+id/etName"
        android:layout_centerHorizontal="true"
        android:onClick="checkRegister"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:layout_below="@+id/txtEmail"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPW1"
        android:layout_below="@+id/txtPW"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etName"
        android:layout_below="@+id/txtName"
        android:layout_alignLeft="@+id/etPW1"
        android:layout_alignStart="@+id/etPW1"
        android:textColor="@android:color/white" />

    <TextView
        android:text="@string/namePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtName"
        android:layout_marginTop="82dp"
        android:layout_below="@+id/txtPWConfirm"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light" />

    <TextView
        android:text="@string/pwConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/txtPWConfirm"
        android:layout_below="@+id/etPW1"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/txtPWConfirm"
        android:layout_alignLeft="@+id/etName"
        android:layout_alignStart="@+id/etName"
        android:id="@+id/etPW2"
        android:textColor="@android:color/white" />

</RelativeLayout>
