<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_change_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hitro.a5x5assistant.ChangeEmailActivity"
    tools:showIn="@layout/activity_change_email">

    <TextView
        android:text="@string/newEmailPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:id="@+id/txtNewEmail"
        android:textAppearance="@style/TextAppearence.App.TextInputLayout"
        android:textColor="@color/background_material_red"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="35dp"
        android:id="@+id/etNewEmail"
        android:hint="@string/newEmail"
        android:textColor="@android:color/white"
        android:layout_below="@+id/txtNewEmail"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/changeEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNewEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:id="@+id/btnChangeEmail" />
</RelativeLayout>
